<resources>
    <string name="app_name">DoctoEasy</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Log in</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="patient">Patient</string>
    <string name="healthcare_specialist">Healthcare specialist</string>
    <string name="clinic">Clinic</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="accept_rules_and_conditions">I accept the rules and conditions</string>
    <string name="newsletter_subcription">I want newsletter subscription</string>
    <string name="search">Search</string>
    <string name="appointment">Appointment</string>
    <string name="inbox">Inbox</string>
    <string name="health_check">Health Check</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello</string>
    <string name="find">Find</string>
    <string name="medical_services_now">medical services now</string>
    <string name="specialist">Specialist</string>
    <string name="area">Area</string>
    <string name="what_are_we_looking_for">What are we looking for?</string>
    <string name="select_prefered_location">Select prefered clinicLocation</string>
    <string name="select_date">Select date</string>
    <string name="done">Done</string>
    <string name="clinicLocation">Location</string>
    <string name="date">Date</string>
</resources>
