<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/nav_appointment"
        android:icon="@drawable/ic_appointment"
        android:title="@string/appointment"/>

    <item
        android:id="@+id/nav_inbox"
        android:icon="@drawable/ic_inbox"
        android:title="@string/inbox"/>

    <item
        android:id="@+id/nav_health_check"
        android:icon="@drawable/ic_health_check"
        android:title="@string/health_check"/>

    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_account"
        android:title="@string/login"/>

</menu>