<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFragment"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/tv_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_header"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/btn_patient"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign_up_choose"
            android:drawableStart="@drawable/ic_patient"
            android:drawablePadding="-30dp"
            android:gravity="center"
            android:paddingStart="20dp"
            android:text="@string/patient"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_specialist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign_up_choose"
            android:drawableStart="@drawable/ic_specialist"
            android:drawablePadding="-10dp"
            android:paddingStart="20dp"
            android:text="@string/healthcare_specialist"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_clinic"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign_up_choose"
            android:drawableStart="@drawable/ic_clinic"
            android:drawablePadding="-40dp"
            android:paddingStart="20dp"
            android:text="@string/clinic"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</RelativeLayout>