<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFormFragment"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/tv_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_form_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_header"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="30dp"
            android:paddingEnd="20dp"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textAllCaps="true"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_form"
                android:gravity="center_vertical"
                android:inputType="text|textCapWords"
                android:lines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/last_name"
                android:textAllCaps="true"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_form"
                android:gravity="center_vertical"
                android:inputType="text|textCapWords"
                android:lines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/gender"
                android:textAllCaps="true"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_form"
                android:drawableEnd="@drawable/ic_arrow_bottom"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:paddingStart="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_of_birth"
                android:textAllCaps="true"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_form"
                android:drawableEnd="@drawable/ic_arrow_bottom"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:paddingStart="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/phone_number"
                android:textAllCaps="true"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="2.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_form"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:lines="1"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="2.5dp"
                    android:layout_marginEnd="2.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_form"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:lines="1"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="2.5dp"
                    android:layout_weight="4"
                    android:background="@drawable/edit_text_form"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:lines="1"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_form"
                android:gravity="center_vertical"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textAllCaps="true"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_form"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/confirm_password"
                android:textAllCaps="true"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_form"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

            <CheckBox
                android:id="@+id/cb_accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/accept_rules_and_conditions"
                android:theme="@style/CustomCheckBox" />

            <CheckBox
                android:id="@+id/cb_subscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newsletter_subcription"
                android:theme="@style/CustomCheckBox" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="185dp"
                android:layout_height="57dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_sign_up"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>