<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SearchFragment"
    android:background="@android:color/white">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@android:color/white"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetEnd="0dp"
            android:contentInsetRight="0dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/ic_logo_small" />

                <ImageView
                    android:id="@+id/toolbar_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/ic_phone_toolbar" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar_layout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/hello"
        android:textColor="@color/colorFormBlack"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_hello"
        android:layout_marginStart="20dp"
        android:text="Find medical services now"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_specialist_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_find"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/specialist"
        android:textAllCaps="true"
        android:textColor="@color/colorFormBlack"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_specialist"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/tv_specialist_title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_form"
        android:drawableEnd="@drawable/ic_arrow_right_form"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/what_are_we_looking_for"
        android:paddingStart="5dp"
        android:paddingEnd="10dp" />

    <TextView
        android:id="@+id/tv_area_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_specialist"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/area"
        android:textAllCaps="true"
        android:textColor="@color/colorFormBlack"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_area"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/tv_area_title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_form"
        android:drawableEnd="@drawable/ic_arrow_right_form"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/select_prefered_location"
        android:paddingStart="5dp"
        android:paddingEnd="10dp" />

    <TextView
        android:id="@+id/tv_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_area"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/date"
        android:textAllCaps="true"
        android:textColor="@color/colorFormBlack"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/tv_date_title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_form"
        android:drawableEnd="@drawable/ic_arrow_right_form"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/select_date"
        android:paddingStart="5dp"
        android:paddingEnd="10dp" />

    <RelativeLayout
        android:id="@+id/rl_next"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_next">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_arrow_right_white" />

    </RelativeLayout>
</RelativeLayout>