<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ForgotPasswordFragment"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/tv_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/email_address"
        android:textAllCaps="true"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/et_email_address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/tv_email_address"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_form"
        android:gravity="center"
        android:inputType="textEmailAddress" />

    <RelativeLayout
        android:id="@+id/rl_next"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_next"
        android:layout_alignParentBottom="true">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_arrow_right_white" />

    </RelativeLayout>

</RelativeLayout>